--- a/css/transacciones.css
+++ b/css/transacciones.css
@@ -5,7 +5,7 @@ body {
     overflow: hidden;
 }
 .sidebar {
-    background-color: #00204a;
+    background-color: #151521;;
     padding: 20px;
     height: 100vh;
     width: 250px;
