--- a/app/views/css/styles.css
+++ b/app/views/css/styles.css
@@ -12,10 +12,12 @@ body {
 }
 
 .container {
-    display: flex;
-    height: 100vh;
     width: 100%;
-    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+    /* hace que sidebar y content crezcan juntos */
+    overflow: visible;
 }
 
 .sidebar {
@@ -24,7 +26,7 @@ body {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
     flex-shrink: 0;
 }
 
